--- a/app/public/home.html
+++ b/app/public/home.html
@@ -15,8 +15,9 @@
                 <padding-top></padding-top>
                 <h1 class=""><i class="glyphicon glyphicon-heart" aria-hidden="true"></i> Find a Date</h1>
                     <hr>
-                    <h2 class="">Answer several questions about you. </h2>
+                    <h2 class="">Just answer a few questions about you. </h2>
                     <h2 class="">Now we will see who your best match is! </h2>
+                    <br>
                     <br>
                     <div class="">
                             <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Questions</h4></button></a>
