--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -168,7 +168,7 @@
                     </div>
                     <div class="modal-body">
                         <h2 id="matchName"></h2>
-                        <img id="matchImg" src="" alt="">
+                        <img id="matchImg" src="http://static4.depositphotos.com/1017986/475/i/950/depositphotos_4759849-Surprised-woman-face.jpg" alt="">
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
